<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.rccookie</groupId>
  <artifactId>math</artifactId>
  <version>2.9.0</version>

  <properties>
    <maven.compiler.source>18</maven.compiler.source>
    <maven.compiler.target>18</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/rc-cookie/*</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.github.rccookie</groupId>
      <artifactId>util</artifactId>
      <version>1.13.7.6</version>
    </dependency>
    <dependency>
      <groupId>com.github.rccookie</groupId>
      <artifactId>http</artifactId>
      <version>0.0.3</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <!--suppress MavenModelInspection -->
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>18</source>
          <target>18</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>

<!--      <plugin>-->
<!--        &lt;!&ndash;suppress MavenModelInspection &ndash;&gt;-->
<!--        <artifactId>maven-assembly-plugin</artifactId>-->
<!--        <configuration>-->
<!--          <archive>-->
<!--            <manifest>-->
<!--              <mainClass>com.github.rccookie.math.calculator.Calculator</mainClass>-->
<!--            </manifest>-->
<!--          </archive>-->
<!--          <descriptorRefs>-->
<!--            <descriptorRef>jar-with-dependencies</descriptorRef>-->
<!--          </descriptorRefs>-->
<!--        </configuration>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <phase>package</phase>-->
<!--            <goals><goal>single</goal></goals>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->

<!--      <plugin>-->
<!--        <groupId>com.akathist.maven.plugins.launch4j</groupId>-->
<!--        <artifactId>launch4j-maven-plugin</artifactId>-->
<!--        <version>2.1.3</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <id>l4j-clui</id>-->
<!--            <phase>package</phase>-->
<!--            <goals><goal>launch4j</goal></goals>-->
<!--            <configuration>-->
<!--              <headerType>console</headerType>-->
<!--              <outfile>target/${project.artifactId}.exe</outfile>-->
<!--              <jar>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</jar>-->
<!--              <errTitle>${name}</errTitle>-->
<!--              <classPath>-->
<!--                <mainClass>com.github.rccookie.math.calculator.Calculator</mainClass>-->
<!--                <preCp>anything</preCp>-->
<!--                <addDependencies>true</addDependencies>-->
<!--              </classPath>-->
<!--              <jre>-->
<!--                <path>%JAVA_HOME%;%PATH%</path>-->
<!--                <minVersion>18</minVersion>-->
<!--              </jre>-->
<!--              <opt>&#45;&#45;enable-preview</opt>-->
<!--              <versionInfo>-->
<!--                <fileVersion>${project.version}.0</fileVersion>-->
<!--                <txtFileVersion>txt file version?</txtFileVersion>-->
<!--                <fileDescription>a description</fileDescription>-->
<!--                <copyright>MIT</copyright>-->
<!--                <productVersion>${project.version}.0</productVersion>-->
<!--                <txtProductVersion>txt product version</txtProductVersion>-->
<!--                <productName>${project.artifactId}</productName>-->
<!--                <internalName>${project.artifactId}</internalName>-->
<!--                <originalFilename>math.exe</originalFilename>-->
<!--              </versionInfo>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>GitHub</id>
      <name>GitHub Rc-Cookie Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/Rc-Cookie/calculator</url>
    </repository>
  </distributionManagement>
</project>
